[gd_scene load_steps=28 format=3 uid="uid://bayc67pdsup51"]

[ext_resource type="Shader" uid="uid://b6vfdfnsqggom" path="res://Shaders/erosion.gdshader" id="1_1ie4o"]
[ext_resource type="Texture2D" uid="uid://bkw45fpuc1ea3" path="res://Assets/Sprites/Owen Art/ManSheet.png" id="1_isu26"]
[ext_resource type="Script" uid="uid://c4okmogv0tvjt" path="res://Scripts/red_knight.gd" id="1_jr21u"]
[ext_resource type="Texture2D" uid="uid://b0myllnqt4i71" path="res://Assets/Sprites/Noise.png" id="2_vp183"]
[ext_resource type="Shader" uid="uid://cfql7dxyj88i4" path="res://Shaders/hit_effect.gdshader" id="2_xghsx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bibtd"]
resource_local_to_scene = true
shader = ExtResource("1_1ie4o")
shader_parameter/dissolve_texture = ExtResource("2_vp183")
shader_parameter/dissolve_value = 0.0
shader_parameter/burn_size = 0.0499999988824
shader_parameter/burn_color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1ie4o"]
resource_local_to_scene = true
shader = ExtResource("2_xghsx")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_xghsx"]
atlas = ExtResource("1_isu26")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ie4o"]
atlas = ExtResource("1_isu26")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vp183"]
atlas = ExtResource("1_isu26")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bibtd"]
atlas = ExtResource("1_isu26")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yjo1"]
atlas = ExtResource("1_isu26")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ed1g7"]
atlas = ExtResource("1_isu26")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k54fp"]
atlas = ExtResource("1_isu26")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6m0yo"]
atlas = ExtResource("1_isu26")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w50di"]
atlas = ExtResource("1_isu26")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_0tpon"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xghsx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ie4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vp183")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bibtd")
}],
"loop": false,
"name": &"Death",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yjo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ed1g7")
}],
"loop": true,
"name": &"Idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k54fp")
}],
"loop": true,
"name": &"Jump",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6m0yo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w50di")
}],
"loop": true,
"name": &"Walk",
"speed": 2.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m8i00"]
radius = 13.888881
height = 38.043472

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jr21u"]
radius = 17.361101
height = 43.478256

[sub_resource type="CircleShape2D" id="CircleShape2D_jr21u"]
radius = 185.18523

[sub_resource type="Animation" id="Animation_actkj"]
resource_name = "Death Disolve"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimatedSprite2D:use_parent_material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.012225666),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:material:shader_parameter/dissolve_value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.012225666, 1.3333334),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_1w4yp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimatedSprite2D:use_parent_material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:material:shader_parameter/dissolve_value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8yjo1"]
_data = {
&"Death Disolve": SubResource("Animation_actkj"),
&"RESET": SubResource("Animation_1w4yp")
}

[sub_resource type="Animation" id="Animation_1ie4o"]
resource_name = "Death Disolve"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:use_parent_material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.033333335),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("ShaderMaterial_bibtd")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:material:shader_parameter/dissolve_value")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_vp183"]
resource_name = "Hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_bibtd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:use_parent_material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:material")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("ShaderMaterial_bibtd")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:material:shader_parameter/dissolve_value")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_actkj"]
_data = {
&"Death Disolve": SubResource("Animation_1ie4o"),
&"Hurt": SubResource("Animation_vp183"),
&"RESET": SubResource("Animation_bibtd")
}

[node name="RedKnight" type="CharacterBody2D" groups=["Enemy", "can_pogo"]]
material = SubResource("ShaderMaterial_bibtd")
collision_layer = 2
collision_mask = 34
script = ExtResource("1_jr21u")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_1ie4o")
sprite_frames = SubResource("SpriteFrames_0tpon")
animation = &"Death"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(0.28800017, 0.36800003)
shape = SubResource("CapsuleShape2D_m8i00")

[node name="DirectionTimer" type="Timer" parent="." groups=["Enemy"]]
autostart = true

[node name="hitBox" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBox"]
position = Vector2(0, 1)
scale = Vector2(0.28800017, 0.36800003)
shape = SubResource("CapsuleShape2D_jr21u")

[node name="detectionZone" type="Area2D" parent="."]
visible = false
scale = Vector2(0.99999994, 0.99999994)

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionZone"]
scale = Vector2(0.21599996, 0.21599996)
shape = SubResource("CircleShape2D_jr21u")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../HitFlashAnimationPlayer")
libraries = {
&"": SubResource("AnimationLibrary_8yjo1")
}

[node name="HitFlashAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_actkj")
}

[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
[connection signal="body_entered" from="detectionZone" to="." method="_on_detection_zone_body_entered"]
[connection signal="body_exited" from="detectionZone" to="." method="_on_detection_zone_body_exited"]
